# osg-3d-vis

./: .gitignore  CMakeLists.txt  Makefile  README.md  osg-3d-vis.pro
config/: VelocityLIC.txt  VortexDetect.txt
shader/: LICTexPS.glsl  LICTexPSWindow.glsl  LICTexVS.glsl  RadarGridPointsPS.glsl  RadarGridPointsVS.glsl  RadarRoundScanPS.glsl  RadarRoundScanVS.glsl  VelocityLICVS.glsl  VortexMLPS.glsl  blendTex.fs  calculateSpeed.fs  calculateSpeedTest.fs  drawArrows.fs  drawArrows.vs  drawSegment.vert  drawSegmentTest.vert  frag.fs  fullscreenQuadMVP.vs  lightps.glsl  lightvs.glsl  lineDrawing.fs  llh2xyz.vs  pass.vs  samplerTex2D.fs  samplerTex2DBlendArrow.fs  samplerTex2DJumpFrame.fs  screenDraw.fs  test.fs  testFrag.fs  updatePosition.fs  vert.vs  volumeRenderPS.glsl  volumeRenderVS.glsl
shader/Cloud/: cloudPS.glsl  cloudVS.glsl
shader/Pbr/: lightps.glsl  lightvs.glsl
shader/charts/: ps.glsl  vs.glsl
shader/cloud/: cloudPS.glsl  cloudVS.glsl
shader/gpu-instances/: grass.frag  grass.vert  tree.frag  tree.vert
shader/old-shaders/: VelocityLICPS.glsl  blendTex.fs  calculateSpeed.fs  calculateSpeedTest.fs  drawArrows.fs  drawArrows.vs  drawSegment.vert  drawSegmentTest.vert  frag.fs  fullscreenQuad.vs  fullscreenQuadMVP.vs  lineDrawing.fs  lineDrawing.vs  llh2xyz.vs  pass.vs  samplerTex2D.fs  samplerTex2DBlendArrow.fs  samplerTex2DJumpFrame.fs  test.fs  testFrag.fs  updatePosition.fs  vert.vs
shader/radar/: EmiPS.glsl  EmiVS.glsl  MergePS.glsl  MergeVS.glsl  RadarLineWithNormalPS.glsl  RadarLineWithNormalVS.glsl  RadarRoundScanGS.glsl  RadarRoundScanPS.glsl  RadarRoundScanVS.glsl  Radarlineps.glsl  Radarlinevs.glsl  _RadarRoundScanPS.glsl  _RadarRoundScanVS.glsl
shader/rtt/: fullscreenColor.fs  rttScreenDraw.fs
shader/streamline-cpu/: animate.ps  animate.vs  copyColorAndDepth.fs  fullscreenQuad.vs  screenDraw.fs  segmentDraw.fs  segmentDraw.vs  trailDraw.fs
src/: APMRadarRender.cpp  APMRadarRender.h  ColumnChart.cpp  ColumnChart.h  Concave.h  ConcaveBase.h  CurveChart.h  DotChart.cpp  DotChart.h  OSGPCDLoader.h  PieChart.cpp  PieChart.h  PolylineChart.cpp  PolylineChart.h  Radar.h  Selection.cpp  Selection.h  StreamLineMainWindow.h  Util.h  VelocityFieldGPU.h  VelocityLIC.h  VortexDetect.h  chart.cpp  chart.h  globals.cpp  globals.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  streamline.ui  streamline_cpu.h  ui_main_window.h  util.h  volumeRender.cpp
src/charts/: Axis.cpp  Axis.h  ColumnChart.cpp  ColumnChart.h  CurveChart.cpp  CurveChart.h  DotChart.h  ParallelChart.cpp  ParallelChart.h  PieChart.h  PolylineChart.cpp  PolylineChart.h  RadarChart.cpp  RadarChart.h  chart.cpp  chart.h  chart.ui  chart.ui.autosave  ui_chart.h
src/earth/: BillboardCloud.h  Cloud.cpp  Cloud.h  Earth.hpp  Forest.cpp  Forest.h  Grass.cpp  Grass.h  Tree.cpp  Tree.h  terrain_coords.h
src/loader/: OSGB.h
src/particles/: Particle.cpp  Particle.h
src/pbr/: focus.cpp  focus.h  focus.ui  pbr.hpp  ui_focus.h
src/radar/: Concave.cpp  ConcaveBase.cpp  Radar.cpp  Radar.h  radar.ui  radarui.cpp  radarui.h  ui_radar.h
src/velocity_field/: StreamLineCPUMultiPassCreation.cpp  StreamLineMainWindow.h  StreamLineSeedPointCalculation.cpp  StreamlineCPU.cpp  StreamlineCPU.h  StreamlineGPU.cpp  StreamlineGPU.h  VelocityFieldGPU.h  VelocityLIC.h  VolumeLIC.h  VortexDetect.h  rttcamera.cpp  rttcamera.h  streamline_cpu.h  streamline_cpu.ui  ui_streamline.h  ui_streamline_cpu.h
